<resources>
    <string name="app_name">CapstoneP</string>

    <!-- App id -->
    <string name="google_ad_id">	ca-app-pub-3940256099942544/6300978111</string>

    <string name="action_retry">Retry</string>
    <string name="action_top_rated">Top rated</string>
    <string name="action_now_playing">Now playing</string>
    <string name="action_popular">Popular</string>
    <string name="action_sort_by">Sort by</string>
    <string name="movie_backdrop_content_description">Movie backdropPath</string>
    <string name="movie_poster">Movie poster</string>
    <string name="label_overview">Overview</string>
    <string name="release_date">Release date</string>
    <string name="label_votes">%s votes</string>
    <string name="action_share">Share trailer</string>
    <string name="action_favorite">Add to favorites</string>
    <string name="action_remove_from_favorites">Delete from favorites</string>
    <string name="movie_added_successfully">Movie added to your favorites successfully</string>
    <string name="movie_removed_successfully">Movie removed from your favorites successfully</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="play_icon">Play icon</string>
    <string name="trailer_thumbnail">Trailer thumbnail</string>
    <string name="cast">The Cast</string>
    <string name="trailers">Trailers</string>
    <string name="user_reviews">User Reviews</string>
    <string name="language">Language</string>
    <string name="favorites">Favorites</string>
    <string name="bottom_navigation_border">Bottom navigation border</string>
    <string name="no_favorites">Empty. you haven\'t added any movies to your favorites yet!</string>
    <string name="review_author_image">Review author image</string>
    <string name="discover">Discover</string>
    <string name="press_me">Press me</string>
    <string name="enter">Enter</string>
    <string name="signout">signOut</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="logo">TODO</string>
    <string name="todo_logo">TODO</string>
    <string name="sign_out_text">Sign Out Successfully</string>
    <string name="edit_text">Button Text</string>
    <string name="confirm">Confirm</string>
    <string name="my_widget">My Widget</string>
    <string name="empty">Empty</string>
    <string name="item">Item</string>


</resources>
