<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="#FFA726" />


    <TextView
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="#FFA726" />

    <Button
        android:id="@+id/signOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="24dp"
        android:text="@string/signout"
        app:backgroundTint="#FFA726" />



    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        ads:srcCompat="@drawable/themovie"
        android:contentDescription="@string/todo_logo" />


    <Button
        android:id="@+id/enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="24dp"
        android:text="@string/enter"
        app:iconTint="#FFA726" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="24dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />




</LinearLayout>