<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:gravity="center_horizontal"
android:layout_width="match_parent"
android:layout_height="match_parent">


<TextView
    android:id="@+id/example_widget_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="#FFF"
    android:text="@string/my_widget"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    android:textColor="@color/colorPrimary" />

<Button
    android:layout_marginTop="5dp"
    android:id="@+id/example_widget_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/press_me"
    app:backgroundTint="#388E3C" />




    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <StackView
            android:id="@+id/example_widget_stack_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:loopViews="true" />

        <TextView
            android:id="@+id/example_widget_empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/empty"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </FrameLayout>

</LinearLayout>